...
    }

    var body: some View {
        NavigationView {
            Form {
                Section(header: Text("Habit Details")) {
                    TextField("Habit Name", text: $habit.name)
                    // Replace "Habit Subtitle" with "Description"
                    TextField("Description", text: $habit.subtitle)

                    // Add a DatePicker for selecting the completion date
                    DatePicker("Completion Date", selection: $selectedCompletionDate, displayedComponents: .date)
                }
            }
            .navigationBarTitle(habitToEdit == nil ? "Add Habit" : "Edit Habit")
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button("Cancel") {
                        presentationMode.wrappedValue.dismiss()
                    }
                }
...
